Add model configurations

--- a/transformer_decoder_training/jupyter_notebooks/evaluation/evaluation.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/evaluation/evaluation.ipynb
@@ -16,8 +16,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-08-19T23:55:36.998493Z",
-     "start_time": "2024-08-19T23:55:35.819141Z"
+     "end_time": "2024-08-20T08:15:03.276416Z",
+     "start_time": "2024-08-20T08:15:02.031289Z"
     }
    },
    "source": [
@@ -36,8 +36,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-19T23:55:37.552926Z",
-     "start_time": "2024-08-19T23:55:36.999131Z"
+     "end_time": "2024-08-20T08:15:03.994203Z",
+     "start_time": "2024-08-20T08:15:03.277612Z"
     }
    },
    "cell_type": "code",
@@ -64,8 +64,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-19T23:55:37.557118Z",
-     "start_time": "2024-08-19T23:55:37.553525Z"
+     "end_time": "2024-08-20T08:15:03.997888Z",
+     "start_time": "2024-08-20T08:15:03.994712Z"
     }
    },
    "cell_type": "code",
@@ -97,8 +97,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-19T23:57:35.135817Z",
-     "start_time": "2024-08-19T23:55:37.557818Z"
+     "end_time": "2024-08-20T08:17:05.927387Z",
+     "start_time": "2024-08-20T08:15:03.998581Z"
     }
    },
    "cell_type": "code",
@@ -110,60 +110,90 @@
      "output_type": "stream",
      "text": [
       "sequecne tensor: torch.Size([2803, 24])\n",
+      "sequence with start token tensor: torch.Size([2804, 24])\n",
+      "context_seq tensor: torch.Size([1, 5, 24])\n",
+      "continuing seq torch.Size([1, 2799, 24])\n",
       "Tokens to generate: 2799\n",
       "Binary Tensors after concatinating:  torch.Size([2799, 24])\n",
       "Binary Tensors after unsqueezing:  torch.Size([1, 2799, 24])\n",
       "Context sequence + Generated tokens:  torch.Size([1, 2804, 24])\n",
       "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.2/tests/standard/midi-unprocessed_04_r1_2008_01-04_orig_mid--audio_04_r1_2008_wav--1-split.mid\n",
       "sequecne tensor: torch.Size([14379, 24])\n",
+      "sequence with start token tensor: torch.Size([14380, 24])\n",
+      "context_seq tensor: torch.Size([1, 5, 24])\n",
+      "continuing seq torch.Size([1, 14375, 24])\n",
       "Tokens to generate: 14375\n",
       "Binary Tensors after concatinating:  torch.Size([14375, 24])\n",
       "Binary Tensors after unsqueezing:  torch.Size([1, 14375, 24])\n",
       "Context sequence + Generated tokens:  torch.Size([1, 14380, 24])\n",
       "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.2/tests/standard/midi-unprocessed_01_r1_2006_01-09_orig_mid--audio_01_r1_2006_01_track01_wav-split.mid\n",
       "sequecne tensor: torch.Size([2803, 24])\n",
+      "sequence with start token tensor: torch.Size([2804, 24])\n",
+      "context_seq tensor: torch.Size([1, 5, 24])\n",
+      "continuing seq torch.Size([1, 2799, 24])\n",
       "Tokens to generate: 2799\n",
       "Binary Tensors after concatinating:  torch.Size([2799, 24])\n",
       "Binary Tensors after unsqueezing:  torch.Size([1, 2799, 24])\n",
       "Context sequence + Generated tokens:  torch.Size([1, 2804, 24])\n",
       "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.2/tests/standard_01/midi-unprocessed_04_r1_2008_01-04_orig_mid--audio_04_r1_2008_wav--1-split.mid\n",
       "sequecne tensor: torch.Size([14379, 24])\n",
+      "sequence with start token tensor: torch.Size([14380, 24])\n",
+      "context_seq tensor: torch.Size([1, 5, 24])\n",
+      "continuing seq torch.Size([1, 14375, 24])\n",
       "Tokens to generate: 14375\n",
       "Binary Tensors after concatinating:  torch.Size([14375, 24])\n",
       "Binary Tensors after unsqueezing:  torch.Size([1, 14375, 24])\n",
       "Context sequence + Generated tokens:  torch.Size([1, 14380, 24])\n",
       "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.2/tests/standard_01/midi-unprocessed_01_r1_2006_01-09_orig_mid--audio_01_r1_2006_01_track01_wav-split.mid\n",
       "sequecne tensor: torch.Size([2803, 24])\n",
+      "sequence with start token tensor: torch.Size([2804, 24])\n",
+      "context_seq tensor: torch.Size([1, 5, 24])\n",
+      "continuing seq torch.Size([1, 2799, 24])\n",
       "Tokens to generate: 2799\n",
       "Binary Tensors after concatinating:  torch.Size([2799, 24])\n",
       "Binary Tensors after unsqueezing:  torch.Size([1, 2799, 24])\n",
       "Context sequence + Generated tokens:  torch.Size([1, 2804, 24])\n",
       "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.2/tests/standard_015/midi-unprocessed_04_r1_2008_01-04_orig_mid--audio_04_r1_2008_wav--1-split.mid\n",
       "sequecne tensor: torch.Size([14379, 24])\n",
+      "sequence with start token tensor: torch.Size([14380, 24])\n",
+      "context_seq tensor: torch.Size([1, 5, 24])\n",
+      "continuing seq torch.Size([1, 14375, 24])\n",
       "Tokens to generate: 14375\n",
       "Binary Tensors after concatinating:  torch.Size([14375, 24])\n",
       "Binary Tensors after unsqueezing:  torch.Size([1, 14375, 24])\n",
       "Context sequence + Generated tokens:  torch.Size([1, 14380, 24])\n",
       "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.2/tests/standard_015/midi-unprocessed_01_r1_2006_01-09_orig_mid--audio_01_r1_2006_01_track01_wav-split.mid\n",
       "sequecne tensor: torch.Size([2803, 24])\n",
+      "sequence with start token tensor: torch.Size([2804, 24])\n",
+      "context_seq tensor: torch.Size([1, 5, 24])\n",
+      "continuing seq torch.Size([1, 2799, 24])\n",
       "Tokens to generate: 2799\n",
       "Binary Tensors after concatinating:  torch.Size([2799, 24])\n",
       "Binary Tensors after unsqueezing:  torch.Size([1, 2799, 24])\n",
       "Context sequence + Generated tokens:  torch.Size([1, 2804, 24])\n",
       "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.2/tests/standard_02/midi-unprocessed_04_r1_2008_01-04_orig_mid--audio_04_r1_2008_wav--1-split.mid\n",
       "sequecne tensor: torch.Size([14379, 24])\n",
+      "sequence with start token tensor: torch.Size([14380, 24])\n",
+      "context_seq tensor: torch.Size([1, 5, 24])\n",
+      "continuing seq torch.Size([1, 14375, 24])\n",
       "Tokens to generate: 14375\n",
       "Binary Tensors after concatinating:  torch.Size([14375, 24])\n",
       "Binary Tensors after unsqueezing:  torch.Size([1, 14375, 24])\n",
       "Context sequence + Generated tokens:  torch.Size([1, 14380, 24])\n",
       "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.2/tests/standard_02/midi-unprocessed_01_r1_2006_01-09_orig_mid--audio_01_r1_2006_01_track01_wav-split.mid\n",
       "sequecne tensor: torch.Size([2803, 24])\n",
+      "sequence with start token tensor: torch.Size([2804, 24])\n",
+      "context_seq tensor: torch.Size([1, 5, 24])\n",
+      "continuing seq torch.Size([1, 2799, 24])\n",
       "Tokens to generate: 2799\n",
       "Binary Tensors after concatinating:  torch.Size([2799, 24])\n",
       "Binary Tensors after unsqueezing:  torch.Size([1, 2799, 24])\n",
       "Context sequence + Generated tokens:  torch.Size([1, 2804, 24])\n",
       "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.2/tests/standard_025/midi-unprocessed_04_r1_2008_01-04_orig_mid--audio_04_r1_2008_wav--1-split.mid\n",
       "sequecne tensor: torch.Size([14379, 24])\n",
+      "sequence with start token tensor: torch.Size([14380, 24])\n",
+      "context_seq tensor: torch.Size([1, 5, 24])\n",
+      "continuing seq torch.Size([1, 14375, 24])\n",
       "Tokens to generate: 14375\n",
       "Binary Tensors after concatinating:  torch.Size([14375, 24])\n",
       "Binary Tensors after unsqueezing:  torch.Size([1, 14375, 24])\n",
