--- a/transformer_decoder_training/jupyter_notebooks/evaluation/evaluation.ipynb
+++ b/transformer_decoder_training/jupyter_notebooks/evaluation/evaluation.ipynb
@@ -16,8 +16,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-08-20T08:15:03.276416Z",
-     "start_time": "2024-08-20T08:15:02.031289Z"
+     "end_time": "2024-08-25T00:23:08.754306Z",
+     "start_time": "2024-08-25T00:23:07.650694Z"
     }
    },
    "source": [
@@ -36,8 +36,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-20T08:15:03.994203Z",
-     "start_time": "2024-08-20T08:15:03.277612Z"
+     "end_time": "2024-08-25T00:23:09.293445Z",
+     "start_time": "2024-08-25T00:23:08.755242Z"
     }
    },
    "cell_type": "code",
@@ -45,9 +45,9 @@
     "import transformer_decoder_training.training_helper_functions as train_helpers\n",
     "import transformer_decoder_training.testing_helper_functions as test_helpers\n",
     "projects_dir = \"/home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models\"\n",
-    "test_data_dir = \"/home/falaxdb/Repos/minus1/transformer_decoder_training/midi_test_files/split_into_midis\"\n",
+    "test_data_dir = \"/transformer_decoder_training/test_files_and_configs/split_into_midis\"\n",
     "\n",
-    "model = test_helpers.load_transformer_model(\"transformer_1.2\", projects_dir, device, True)"
+    "model = test_helpers.load_transformer_model(\"transformer_1.1\", projects_dir, device, True)"
    ],
    "id": "d627d0c178deaed7",
    "outputs": [
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best epoch is epoch number 17\n"
+      "Best epoch is epoch number 12\n"
      ]
     }
    ],
@@ -64,27 +64,28 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-20T08:15:03.997888Z",
-     "start_time": "2024-08-20T08:15:03.994712Z"
+     "end_time": "2024-08-25T00:23:09.297114Z",
+     "start_time": "2024-08-25T00:23:09.293951Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "project_path = Path(projects_dir) / \"transformer_1.2\"\n",
+    "project_path = Path(projects_dir) / \"transformer_1.1\"\n",
     "\n",
     "config = test_helpers.create_json_testing_template()\n",
     "\n",
-    "config[\"test_row_name\"] = \"standard_025\"\n",
-    "config[\"threshold\"] = 0.25\n",
+    "config[\"test_row_name\"] = \"threshold_005\"\n",
+    "config[\"threshold\"] = 0.05\n",
+    "config[\"inference_method\"] = \"inference\"\n",
     "\n",
-    "test_helpers.save_json_testing_configuration(config, project_path)"
+    "test_helpers.save_json_testing_configuration(config, project_path, overwrite=True)"
    ],
    "id": "46f663a13c9c292e",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PosixPath('/home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.2/tests/standard_025_configuration.json')"
+       "PosixPath('/home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.1/tests/threshold_005_configuration.json')"
       ]
      },
      "execution_count": 3,
@@ -96,113 +97,38 @@
   },
   {
    "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2024-08-20T08:17:05.927387Z",
-     "start_time": "2024-08-20T08:15:03.998581Z"
+     "start_time": "2024-08-25T00:23:09.297504Z"
     }
    },
    "cell_type": "code",
-   "source": "test_helpers.testinference_for_model(model, \"transformer_1.2\", projects_dir, device, test_data_dir)",
+   "source": "test_helpers.testinference_for_model(model, \"transformer_1.1\", projects_dir, device, test_data_dir)",
    "id": "6b53c95c74d28409",
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Testing configurations:   0%|          | 0/7 [00:00<?, ?it/s]\n",
+      "Songs:   0%|          | 0/3 [00:00<?, ?it/s]\u001B[A"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "sequecne tensor: torch.Size([2803, 24])\n",
       "sequence with start token tensor: torch.Size([2804, 24])\n",
-      "context_seq tensor: torch.Size([1, 5, 24])\n",
-      "continuing seq torch.Size([1, 2799, 24])\n",
-      "Tokens to generate: 2799\n",
-      "Binary Tensors after concatinating:  torch.Size([2799, 24])\n",
-      "Binary Tensors after unsqueezing:  torch.Size([1, 2799, 24])\n",
-      "Context sequence + Generated tokens:  torch.Size([1, 2804, 24])\n",
-      "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.2/tests/standard/midi-unprocessed_04_r1_2008_01-04_orig_mid--audio_04_r1_2008_wav--1-split.mid\n",
-      "sequecne tensor: torch.Size([14379, 24])\n",
-      "sequence with start token tensor: torch.Size([14380, 24])\n",
-      "context_seq tensor: torch.Size([1, 5, 24])\n",
-      "continuing seq torch.Size([1, 14375, 24])\n",
-      "Tokens to generate: 14375\n",
-      "Binary Tensors after concatinating:  torch.Size([14375, 24])\n",
-      "Binary Tensors after unsqueezing:  torch.Size([1, 14375, 24])\n",
-      "Context sequence + Generated tokens:  torch.Size([1, 14380, 24])\n",
-      "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.2/tests/standard/midi-unprocessed_01_r1_2006_01-09_orig_mid--audio_01_r1_2006_01_track01_wav-split.mid\n",
-      "sequecne tensor: torch.Size([2803, 24])\n",
-      "sequence with start token tensor: torch.Size([2804, 24])\n",
-      "context_seq tensor: torch.Size([1, 5, 24])\n",
-      "continuing seq torch.Size([1, 2799, 24])\n",
-      "Tokens to generate: 2799\n",
-      "Binary Tensors after concatinating:  torch.Size([2799, 24])\n",
-      "Binary Tensors after unsqueezing:  torch.Size([1, 2799, 24])\n",
-      "Context sequence + Generated tokens:  torch.Size([1, 2804, 24])\n",
-      "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.2/tests/standard_01/midi-unprocessed_04_r1_2008_01-04_orig_mid--audio_04_r1_2008_wav--1-split.mid\n",
-      "sequecne tensor: torch.Size([14379, 24])\n",
-      "sequence with start token tensor: torch.Size([14380, 24])\n",
-      "context_seq tensor: torch.Size([1, 5, 24])\n",
-      "continuing seq torch.Size([1, 14375, 24])\n",
-      "Tokens to generate: 14375\n",
-      "Binary Tensors after concatinating:  torch.Size([14375, 24])\n",
-      "Binary Tensors after unsqueezing:  torch.Size([1, 14375, 24])\n",
-      "Context sequence + Generated tokens:  torch.Size([1, 14380, 24])\n",
-      "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.2/tests/standard_01/midi-unprocessed_01_r1_2006_01-09_orig_mid--audio_01_r1_2006_01_track01_wav-split.mid\n",
-      "sequecne tensor: torch.Size([2803, 24])\n",
-      "sequence with start token tensor: torch.Size([2804, 24])\n",
-      "context_seq tensor: torch.Size([1, 5, 24])\n",
-      "continuing seq torch.Size([1, 2799, 24])\n",
-      "Tokens to generate: 2799\n",
-      "Binary Tensors after concatinating:  torch.Size([2799, 24])\n",
-      "Binary Tensors after unsqueezing:  torch.Size([1, 2799, 24])\n",
-      "Context sequence + Generated tokens:  torch.Size([1, 2804, 24])\n",
-      "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.2/tests/standard_015/midi-unprocessed_04_r1_2008_01-04_orig_mid--audio_04_r1_2008_wav--1-split.mid\n",
-      "sequecne tensor: torch.Size([14379, 24])\n",
-      "sequence with start token tensor: torch.Size([14380, 24])\n",
-      "context_seq tensor: torch.Size([1, 5, 24])\n",
-      "continuing seq torch.Size([1, 14375, 24])\n",
-      "Tokens to generate: 14375\n",
-      "Binary Tensors after concatinating:  torch.Size([14375, 24])\n",
-      "Binary Tensors after unsqueezing:  torch.Size([1, 14375, 24])\n",
-      "Context sequence + Generated tokens:  torch.Size([1, 14380, 24])\n",
-      "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.2/tests/standard_015/midi-unprocessed_01_r1_2006_01-09_orig_mid--audio_01_r1_2006_01_track01_wav-split.mid\n",
-      "sequecne tensor: torch.Size([2803, 24])\n",
-      "sequence with start token tensor: torch.Size([2804, 24])\n",
-      "context_seq tensor: torch.Size([1, 5, 24])\n",
-      "continuing seq torch.Size([1, 2799, 24])\n",
-      "Tokens to generate: 2799\n",
-      "Binary Tensors after concatinating:  torch.Size([2799, 24])\n",
-      "Binary Tensors after unsqueezing:  torch.Size([1, 2799, 24])\n",
-      "Context sequence + Generated tokens:  torch.Size([1, 2804, 24])\n",
-      "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.2/tests/standard_02/midi-unprocessed_04_r1_2008_01-04_orig_mid--audio_04_r1_2008_wav--1-split.mid\n",
-      "sequecne tensor: torch.Size([14379, 24])\n",
-      "sequence with start token tensor: torch.Size([14380, 24])\n",
-      "context_seq tensor: torch.Size([1, 5, 24])\n",
-      "continuing seq torch.Size([1, 14375, 24])\n",
-      "Tokens to generate: 14375\n",
-      "Binary Tensors after concatinating:  torch.Size([14375, 24])\n",
-      "Binary Tensors after unsqueezing:  torch.Size([1, 14375, 24])\n",
-      "Context sequence + Generated tokens:  torch.Size([1, 14380, 24])\n",
-      "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.2/tests/standard_02/midi-unprocessed_01_r1_2006_01-09_orig_mid--audio_01_r1_2006_01_track01_wav-split.mid\n",
-      "sequecne tensor: torch.Size([2803, 24])\n",
-      "sequence with start token tensor: torch.Size([2804, 24])\n",
-      "context_seq tensor: torch.Size([1, 5, 24])\n",
-      "continuing seq torch.Size([1, 2799, 24])\n",
-      "Tokens to generate: 2799\n",
-      "Binary Tensors after concatinating:  torch.Size([2799, 24])\n",
-      "Binary Tensors after unsqueezing:  torch.Size([1, 2799, 24])\n",
-      "Context sequence + Generated tokens:  torch.Size([1, 2804, 24])\n",
-      "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.2/tests/standard_025/midi-unprocessed_04_r1_2008_01-04_orig_mid--audio_04_r1_2008_wav--1-split.mid\n",
-      "sequecne tensor: torch.Size([14379, 24])\n",
-      "sequence with start token tensor: torch.Size([14380, 24])\n",
-      "context_seq tensor: torch.Size([1, 5, 24])\n",
-      "continuing seq torch.Size([1, 14375, 24])\n",
-      "Tokens to generate: 14375\n",
-      "Binary Tensors after concatinating:  torch.Size([14375, 24])\n",
-      "Binary Tensors after unsqueezing:  torch.Size([1, 14375, 24])\n",
-      "Context sequence + Generated tokens:  torch.Size([1, 14380, 24])\n",
-      "MIDI file saved to /home/falaxdb/Repos/minus1/transformer_decoder_training/saved_files/saved_models/transformer_1.2/tests/standard_025/midi-unprocessed_01_r1_2006_01-09_orig_mid--audio_01_r1_2006_01_track01_wav-split.mid\n"
+      "context_seq tensor: torch.Size([1, 1025, 24])\n",
+      "continuing seq torch.Size([1, 1779, 24])\n",
+      "Tokens to generate: 1779\n"
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": null
   }
  ],
  "metadata": {
